@@ -8,28 +8,30 @@
 #########################################################################
 
 use Term::Clui;
+# require '../Clui.pm'; import Term::Clui;
 my $home = $ENV{'HOME'} || $ENV{'LOGDIR'}  || (getpwuid($<))[7];
 my $user = $ENV{'USER'} || $ENV{'LOGNAME'} || (getpwuid($<))[0];
-my $dir  = `pwd`; chop $dir;
+use Cwd; my $dir = cwd();
 
 while (1) {
-	my @tasks = ('Browser','Config','Change directory','Edit','FTP');
+	my @tasks = ('Browser','Config','Change directory','Edit','FTP','Mail');
 	if (-r './Makefile') { push (@tasks, 'Make'); }
-	push (@tasks, 'News');
+	push (@tasks, 'Manual', 'News');
 	if (-d "$home/.ssh") { push (@tasks, 'SSH'); }
 
-	my $task = &choose ("$user $dir", @tasks);
+	my $shortdir = $dir;
+	if ((index $shortdir,$home)==0) {substr($shortdir,0,(length $home))= '~';}
+	my $task = &choose ("$user $shortdir", @tasks);
 	if (! $task) { exit 0;
 	} else { $task =~ s/ /_/g; eval "&$task";
 	}
 }
 sub Config {
 	my @files = grep (-w "$home/$_",
-	'.cshrc', '.efaxrc', '.exrc', '.fvwmrc', '.jnewsrc', '.login',
-	'.lynxrc', 'lynx_bookmarks.html',
-	'.mailrc', '.netrc', '.newsrc', '.pinerc', '.popslurp',
-	'.profile', '.rhosts', '.slrnrc', '.tiprc', '.xauth', '.Xauthority',
-	'.xinitrc',
+	'.cshrc', '.efaxrc', '.exrc', '.fvwmrc', '.jnewsrc',
+	'.login', '.lynxrc', 'lynx_bookmarks.html',
+	'.mailrc', '.netrc', '.newsrc', '.pinerc', '.popslurp', '.profile',
+	'.rhosts', '.sig', '.slrnrc', '.tiprc', '.xauth', '.Xauthority', '.xinitrc',
 	);
 	my $file;
 	$file = &choose("Edit which file ?", @files);
@@ -45,7 +47,7 @@ sub Change_directory {
 	$newdir =~ s/^~\//$home\//;
 	if (! -d $newdir) { &sorry("$newdir isn't a directory"); return; }
 	if (! chdir $newdir) { &sorry("can't chdir to $newdir: $!"); return; }
-	$dir = $newdir;
+	$dir = cwd();
 }
 sub Edit {
 	if (!opendir(D,'.')) { &sorry("can't open current directory: $!"); return; }
@@ -72,23 +74,44 @@ sub FTP {
 		}
 	}
 	close F;
-	my $task = &choose('FTP to :', keys %login, 'Edit ~/.netrc');
+	my $task = &choose('FTP to :',keys %login,'Somewhere else','Edit ~/.netrc');
 	if (! $task) { return 1;
+	} elsif ($task eq 'Somewhere else') {
+		my $host = &ask('FTP to where ?'); if ($host) { system "ftp $host"; }
 	} elsif ($task eq 'Edit ~/.netrc') { &edit("$home/.netrc");
 	} else { system "ftp $task";
 	}
 }
+sub Mail {
+	system 'pine';  # /usr/bin/elm ?
+}
 sub Make {
 	if (!open(F,'./Makefile')) { &sorry("can't open Makefile: $!"); return; }
-	my @targets;
-	while (<F>) { if (/^\s*(\S+)\s*:/) { push (@targets, $1); } }
+	my (%vars, @targets, $target);
+	while (<F>) {
+		if (/^\s*(\S+)\s*=\s*(\S+)/) { $vars{$1} = $2; }
+		if (/^\s*(\S+)\s*:/) {
+			$target = $1;
+			while ($target =~ /\$[({](\w+)[)}]/ && $vars{$1}) {
+				$target =~ s/\$[({](\w+)[)}]/$vars{$1}/;
+			}
+			push (@targets, $target);
+		}
+	}
 	close F;
-	my $target = &choose("$dir : Make what ?", @targets);
+	$target = &choose("$dir : Make what ?", @targets);
 	return unless $target;
 	system "make $target";
 }
+sub Manual {
+	my $topic = &ask('Topic ?'); return unless $topic;
+	if (system "man '$topic'") {
+		my $txt = `man -k '$topic'`;
+		&view("Keyword search on $topic", $txt);
+	}
+}
 sub News {
-	system 'slrn';  # /usr/bin/*rn ?
+	system 'slrn';  # /usr/bin/trn ?
 }
 sub SSH {
 	if (! open(F,"$home/.ssh/known_hosts")) {
